Add categories to message dropdown Fixes #62. Also a major refactor of the dropdown code which is a lot cleaner now

--- a/src/content/styling.css
+++ b/src/content/styling.css
@@ -17,7 +17,8 @@
 }
 
 .mojira-helper-messages-dropdown {
-    max-height: 250px;
+    max-height: 300px;
+    width: 300px;
     overflow-y: scroll;
 }
 
